Updated code with improvements

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>RingCentral Authorization Code Flow Authentication</title>
+    <title>RingCentral Authorization Code Flow Authentication Demo</title>
   </head>
   <body>
     <h2>
         RingCentral Authorization Code Flow Authentication
     </h2>
-    <a href="<%- authorize_uri %>">Login RingCentral Account</a>
+    <a href="<%- authorize_uri %>">Login using RingCentral Account</a>
   </body>
 </html>
