--- a/views/protected.ejs
+++ b/views/protected.ejs
@@ -5,7 +5,7 @@
 </head>
 <body>
   <b><a href="/logout">Logout</a></b>
-  <h2>Call APIs</h2>
+  <h2>Welcome to the 'Protected Page', Here you can call RingCentral Platform APIs to do the following:</h2>
   <ul>
       <li><a href="/test?api=extension">Read Extension Info</a></li>
       <li><a href="/test?api=extension-call-log">Read Extension Call Log</a></li>
