--- a/views/protected.ejs
+++ b/views/protected.ejs
@@ -7,9 +7,9 @@
   <b><a href="/logout">Logout</a></b>
   <h2>Welcome to the 'Protected Page', Here you can call RingCentral Platform APIs to do the following:</h2>
   <ul>
-      <li><a href="/test?api=extension">Read Extension Info</a></li>
-      <li><a href="/test?api=extension-call-log">Read Extension Call Log</a></li>
-      <li><a href="/test?api=account-call-log">Read Account Call Log</a></li>
+      <li><a href="/protected?api=extension">Read Extension Info</a></li>
+      <li><a href="/protected?api=extension-call-log">Read Extension Call Log</a></li>
+      <li><a href="/protected?api=account-call-log">Read Account Call Log</a></li>
   </ul>
 </body>
 </html>
